# data_compression

./: CMakeLists.txt  RELEASE_NOTES.md  simple_compress.c
.github/workflows/: ci.yml
test/: simple_compress_test.cpp
